[project]
name = "lbw_flux"
description = "Through this node, you can more easily test the impact of different blocks in flux_lora on the final result."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/SS-snap/ComfyUI-LBW_flux"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LBW_flux"
Icon = ""
